{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 180,
  "lineage": "e2ca5100-ae53-d93f-28da-17597cbb82ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "movebase-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:internet-gateway/igw-0f712992a1776e982",
            "id": "igw-0f712992a1776e982",
            "owner_id": "219232999684",
            "tags": {
              "Name": "movebase-igw"
            },
            "tags_all": {
              "Name": "movebase-igw"
            },
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "dependencies": [
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "movebase-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:loadbalancer/app/movebase-lb/d3465e89cab9a192",
            "arn_suffix": "app/movebase-lb/d3465e89cab9a192",
            "desync_mitigation_mode": "defensive",
            "dns_name": "movebase-lb-2079820937.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:loadbalancer/app/movebase-lb/d3465e89cab9a192",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "movebase-lb",
            "security_groups": [
              "sg-066523ecf54bfdd33",
              "sg-08d4dd637e24873b3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009b7612ee608abaf"
              },
              {
                "subnet_id": "subnet-03ee806355ab86341"
              }
            ],
            "subnets": [
              "subnet-009b7612ee608abaf",
              "subnet-03ee806355ab86341"
            ],
            "tags": {
              "Name": "movebase-lb"
            },
            "tags_all": {
              "Name": "movebase-lb"
            },
            "vpc_id": "vpc-08568369cfed02d6d",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.movebase-allow-80",
            "aws_security_group.movebase-allow-ssh-and-all-egress",
            "aws_subnet.movebase-subnet-public-1",
            "aws_subnet.movebase-subnet-public-2",
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "movebase-lb-listener-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:listener/app/movebase-lb/d3465e89cab9a192/9c322c42cb79075d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:targetgroup/movebase-lb-target-group/2a20cfa882da0144",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:listener/app/movebase-lb/d3465e89cab9a192/9c322c42cb79075d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:loadbalancer/app/movebase-lb/d3465e89cab9a192",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.movebase-lb",
            "aws_lb_target_group.movebase-lb-target-group",
            "aws_security_group.movebase-allow-80",
            "aws_security_group.movebase-allow-ssh-and-all-egress",
            "aws_subnet.movebase-subnet-public-1",
            "aws_subnet.movebase-subnet-public-2",
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "movebase-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:targetgroup/movebase-lb-target-group/2a20cfa882da0144",
            "arn_suffix": "targetgroup/movebase-lb-target-group/2a20cfa882da0144",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:219232999684:targetgroup/movebase-lb-target-group/2a20cfa882da0144",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "movebase-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "movebase-lb-target-group"
            },
            "tags_all": {
              "Name": "movebase-lb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "dependencies": [
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "movebase-route-table-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:route-table/rtb-044284c17502608b7",
            "id": "rtb-044284c17502608b7",
            "owner_id": "219232999684",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f712992a1776e982",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "movebase-route-table-public-1"
            },
            "tags_all": {
              "Name": "movebase-route-table-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.movebase-igw",
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5a5ccd6d6efe80b",
            "route_table_id": "rtb-044284c17502608b7",
            "subnet_id": "subnet-03ee806355ab86341"
          },
          "dependencies": [
            "aws_internet_gateway.movebase-igw",
            "aws_route_table.movebase-route-table-public-1",
            "aws_subnet.movebase-subnet-public-1",
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0564bb1fdb5a2caa5",
            "route_table_id": "rtb-044284c17502608b7",
            "subnet_id": "subnet-009b7612ee608abaf"
          },
          "dependencies": [
            "aws_internet_gateway.movebase-igw",
            "aws_route_table.movebase-route-table-public-1",
            "aws_subnet.movebase-subnet-public-2",
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:security-group/sg-09473faede343cb22",
            "description": "security group that allows ping to it",
            "egress": [],
            "id": "sg-09473faede343cb22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-ping",
            "name_prefix": "",
            "owner_id": "219232999684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ping"
            },
            "tags_all": {
              "Name": "allow-ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "movebase-allow-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:security-group/sg-08d4dd637e24873b3",
            "description": "security group that allows 80 for load balancer",
            "egress": [],
            "id": "sg-08d4dd637e24873b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "movebase-allow-80",
            "name_prefix": "",
            "owner_id": "219232999684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "movebase-allow-80"
            },
            "tags_all": {
              "Name": "movebase-allow-80"
            },
            "timeouts": null,
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "movebase-allow-ssh-and-all-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:security-group/sg-066523ecf54bfdd33",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066523ecf54bfdd33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "movebase-allow-ssh-and-all-egress",
            "name_prefix": "",
            "owner_id": "219232999684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "movebase-allow-ssh-and-all-egress"
            },
            "tags_all": {
              "Name": "movebase-allow-ssh-and-all-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "movebase-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:subnet/subnet-03ee806355ab86341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ee806355ab86341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "219232999684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "movebase-subnet-public-1"
            },
            "tags_all": {
              "Name": "movebase-subnet-public-1"
            },
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "dependencies": [
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "movebase-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:subnet/subnet-009b7612ee608abaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009b7612ee608abaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "219232999684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "movebase-subnet-public-2"
            },
            "tags_all": {
              "Name": "movebase-subnet-public-2"
            },
            "vpc_id": "vpc-08568369cfed02d6d"
          },
          "dependencies": [
            "aws_vpc.movebase-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "movebase-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:219232999684:vpc/vpc-08568369cfed02d6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fd12caacfd44bc8",
            "default_route_table_id": "rtb-0e664ee2abcba72ac",
            "default_security_group_id": "sg-02f98ee545cc3d446",
            "dhcp_options_id": "dopt-3d857154",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08568369cfed02d6d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e664ee2abcba72ac",
            "owner_id": "219232999684",
            "tags": {
              "Name": "movebase-vpc"
            },
            "tags_all": {
              "Name": "movebase-vpc"
            }
          }
        }
      ]
    }
  ]
}